@@ -62,9 +62,6 @@ public class McrankCommand implements TabExecutor {
                         return true;
                     }
                 }
-                else if (CommandUtils.inspectOffline(sender, mcMMO.getDatabaseManager().loadPlayerProfile(playerName, false), Permissions.mcrankOffline(sender))) {
-                    return true;
-                }
 
                 display(sender, playerName);
                 return true;
